--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     .wheel{grid-area: wheel; width:340px;}
     .hub{width:220px;height:220px;}
     /* タイヤから少し離しつつ中央寄り（以前より外側へ） */
-    #shitenno .wheel .corner.tl{top:30%; left:22%;}
-    #shitenno .wheel .corner.tr{top:30%; right:22%;}
-    #shitenno .wheel .corner.bl{bottom:30%; left:22%;}
-    #shitenno .wheel .corner.br{bottom:30%; right:22%;}
+    #shitenno .wheel .corner.tl{top:24%; left:14%;}
+    #shitenno .wheel .corner.tr{top:24%; right:14%;}
+    #shitenno .wheel .corner.bl{bottom:24%; left:14%;}
+    #shitenno .wheel .corner.br{bottom:24%; right:14%;}
 
     .pllink{grid-area: pl;}
     /* 下段4つは同一行・フル幅 */
@@ -71,15 +71,17 @@
     .tiles4-row{grid-template-columns: 1fr;}
     .card{min-height:auto;}
     /* モバイルのチップ座標：タイヤに近すぎない中央寄り */
-    #shitenno .wheel .corner.tl{top:28%; left:18%;}
-    #shitenno .wheel .corner.tr{top:28%; right:18%;}
-    #shitenno .wheel .corner.bl{bottom:28%; left:18%;}
-    #shitenno .wheel .corner.br{bottom:28%; right:18%;}
+    #shitenno .wheel .corner.tl{top:24%; left:12%;}
+    #shitenno .wheel .corner.tr{top:24%; right:12%;}
+    #shitenno .wheel .corner.bl{bottom:24%; left:12%;}
+    #shitenno .wheel .corner.br{bottom:24%; right:12%;}
   }
 
   /* ---- Footer ---- */
   footer{border-top:1px solid var(--line); padding:16px; color:var(--muted); text-align:center;}
   .site-link{margin-top:8px;}
+  /* 変動損益チップは中央固定 */
+  .wheel .corner.oncar{top:50%;left:50%;transform:translate(-50%,-50%);z-index:2;}
 </style>
 </head>
 <body>
@@ -158,7 +160,7 @@
   </section>
 
   <footer>
-    <div>Copyright (c) <span id="cpy-year">2025</span> 税理士法人松本会計事務所 All Rights Reserved. / <span id="build-rev">r34</span></div>
+    <div>Copyright (c) <span id="cpy-year">2025</span> 税理士法人松本会計事務所 All Rights Reserved. / <span id="build-rev">r36</span></div>
     <div id="last-updated" style="margin-top:6px; font-size:13px; color:var(--muted);"></div>
     <div class="site-link"><a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener">税理士法人松本会計事務所HP</a></div>
   </footer>
