--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-<title>松本会計｜ツールポータル</title>
+<title>松本会計｜オリジナルツールポータル</title>
 <meta name="description" content="松本会計の社内外向けツールを一画面に集約。黒字経営4WDと各種便利ツール。" />
 <style>
   :root{ --brand:#578899; --brand-700:#456d77; --brand-300:#7aa5b4; --ink:#0f172a; --muted:#64748b; --bg:#f8fafc; --card:#ffffff; --line:#e2e8f0; --shadow:0 8px 24px rgba(15,23,42,.08); --radius:18px; }
@@ -90,7 +90,7 @@
       <div class="branding">
         <div class="logo"><img src="./ロゴ.jpg" alt="松本会計ロゴ"></div>
         <div>
-          <div class="title">松本会計｜ツールポータル</div>
+          <div class="title">松本会計｜オリジナルツールポータル</div>
           <div class="subtitle">黒字経営を加速する社内外向けリンク集</div>
         </div>
       </div>
@@ -119,7 +119,7 @@
       <div class="linklist pllink">
         <a class="tile" href="https://takatrp.github.io/hendou_PL/" target="_blank" rel="noopener">
           <div class="badge">PL</div>
-          <div class="ttext"><div class="title">ボールで学ぶ変動損益計算書</div><p class="desc">粗利と変動費・固定費の関係を体感的に理解できます。</p></div>
+          <div class="ttext"><div class="title">ボールで学ぶ変動損益計算書</div><p class="desc">売上高と限界利益、固定費の関係を直感的に理解できます。</p></div>
         </a>
       </div>
     </div>
@@ -160,7 +160,7 @@
   </section>
 
   <footer>
-    <div>Copyright (c) <span id="cpy-year">2025</span> 税理士法人松本会計事務所 All Rights Reserved. / <span id="build-rev">r36</span></div>
+    <div>Copyright (c) <span id="cpy-year">2025</span> 税理士法人松本会計事務所 All Rights Reserved. / <span id="build-rev">r37</span></div>
     <div id="last-updated" style="margin-top:6px; font-size:13px; color:var(--muted);"></div>
     <div class="site-link"><a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener">税理士法人松本会計事務所HP</a></div>
   </footer>
