--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
 <title>松本会計｜オリジナルツールポータル</title>
+<link rel="icon" type="image/png" sizes="192x192" href="favicon192192.png">
+<link rel="apple-touch-icon" sizes="192x192" href="favicon192192.png">
+<link rel="shortcut icon" href="favicon192192.png">
 <meta name="description" content="松本会計の社内外向けツールを一画面に集約。黒字経営4WDと各種便利ツール。" />
 <style>
   :root{ --brand:#578899; --brand-700:#456d77; --brand-300:#7aa5b4; --ink:#0f172a; --muted:#64748b; --bg:#f8fafc; --card:#ffffff; --line:#e2e8f0; --shadow:0 8px 24px rgba(15,23,42,.08); --radius:18px; }
