--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
 <title>松本会計｜オリジナルツールポータル</title>
 <meta name="description" content="松本会計の社内外向けツールを一画面に集約。黒字経営4WDと各種便利ツール。" />
+<link rel="icon" type="image/png" sizes="192x192" href="./favicon192192.png" />
+<link rel="shortcut icon" type="image/png" href="./favicon192192.png" />
+<link rel="apple-touch-icon" sizes="192x192" href="./favicon192192.png" />
 <style>
   :root{ --brand:#578899; --brand-700:#456d77; --brand-300:#7aa5b4; --ink:#0f172a; --muted:#64748b; --bg:#f8fafc; --card:#ffffff; --line:#e2e8f0; --shadow:0 8px 24px rgba(15,23,42,.08); --radius:18px; }
   html,body{height:100%;}
@@ -82,6 +85,18 @@
   .credit-link{color:inherit;text-decoration:underline;text-underline-offset:2px;} 
   /* 変動損益チップは中央固定 */
   .wheel .corner.oncar{top:50%;left:50%;transform:translate(-50%,-50%);z-index:2;}
+  /* Header actions & button */
+  .actions{display:flex; align-items:center; gap:8px;}
+  .btn{border:1px solid var(--line); background:#fff; color:var(--brand-700); border-radius:12px; padding:8px 12px; font-weight:700; cursor:pointer; box-shadow:var(--shadow);} 
+  .btn:hover{background:#fefefe;}
+
+  /* QR modal */
+  .modal{position:fixed; inset:0; background:rgba(15,23,42,.5); display:none; align-items:center; justify-content:center; z-index:50;}
+  .modal.show{display:flex;}
+  .modal .modal-body{position:relative; background:#fff; border-radius:18px; padding:12px; max-width:min(92vw,560px); box-shadow:var(--shadow);} 
+  .modal .modal-body img{display:block; width:100%; height:auto;}
+  .modal .btn.close{position:absolute; top:8px; right:8px; padding:6px 10px; border-radius:999px;}
+
 </style>
 </head>
 <body>
@@ -94,8 +109,18 @@
           <div class="subtitle">黒字経営を加速する社内外向けリンク集</div>
         </div>
       </div>
+      <div class="actions">
+        <button id="qr-open" class="btn">共有用QRコード</button>
+      </div>
     </div>
   </header>
+  <!-- QRコード表示モーダル -->
+  <div id="qr-modal" class="modal" aria-hidden="true" role="dialog" aria-label="共有用QRコード">
+    <div class="modal-body">
+      <button class="btn close" id="qr-close" aria-label="閉じる">✕</button>
+      <img src="./共有用QR.png" alt="共有用QRコード" loading="lazy" />
+    </div>
+  </div>
 
   <section id="shitenno" class="section">
     <h2>🚗 黒字経営4WD</h2>
@@ -164,7 +189,7 @@
   </section>
 
   <footer>
-    <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r39</span></div>
+    <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r40</span></div>
     <div id="last-updated" style="margin-top:6px; font-size:13px; color:var(--muted);"></div>
     
   </footer>
@@ -174,6 +199,17 @@
     const yEl = document.getElementById('cpy-year'); if (yEl) yEl.textContent = new Date().getFullYear();
     const upd = document.getElementById('last-updated');
     if (upd) { const d = new Date(document.lastModified); const p=n=>String(n).padStart(2,'0'); upd.textContent = `最終更新: ${d.getFullYear()}-${p(d.getMonth()+1)}-${p(d.getDate())}`; }
+  })();
+
+  // QR modal open/close
+  (function(){
+    const modal = document.getElementById('qr-modal');
+    const openBtn = document.getElementById('qr-open');
+    const closeBtn = document.getElementById('qr-close');
+    if (openBtn && modal) openBtn.addEventListener('click', ()=> modal.classList.add('show'));
+    if (closeBtn && modal) closeBtn.addEventListener('click', ()=> modal.classList.remove('show'));
+    if (modal) modal.addEventListener('click', (e)=>{ if(e.target === modal) modal.classList.remove('show'); });
+    document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') modal?.classList.remove('show'); });
   })();
 </script>
 </body>
