--- a/index.html
+++ b/index.html
@@ -1,1 +1,228 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+<title>オリジナルツールポータル</title>
+<meta name="description" content="松本会計の社内外向けツールを一画面に集約。黒字経営4WDと各種便利ツール。" />
+<link rel="icon" type="image/png" sizes="192x192" href="./favicon192192.png" />
+<link rel="shortcut icon" type="image/png" href="./favicon192192.png" />
+<link rel="apple-touch-icon" sizes="192x192" href="./favicon192192.png" />
+<style>
+  :root{ --brand:#578899; --brand-700:#456d77; --brand-300:#7aa5b4; --ink:#0f172a; --muted:#64748b; --bg:#f8fafc; --card:#ffffff; --line:#e2e8f0; --shadow:0 8px 24px rgba(15,23,42,.08); --radius:18px; }
+  html,body{height:100%;}
+  body{margin:0; background:var(--bg); color:var(--ink); font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans JP", Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; line-height:1.55;}
 
+  /* ---- Hero ---- */
+  .hero{position:relative; background: linear-gradient(180deg, #ffffff 0%, #f3f7fb 100%); padding: 24px 16px 16px; border-bottom:1px solid var(--line);} 
+  .hero .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px; max-width:1100px; margin:0 auto;}
+  .branding{display:flex; align-items:center; gap:12px;}
+  .logo{width:60px;height:60px;border-radius:12px;overflow:hidden;display:grid;place-items:center;text-decoration:none;}
+  .logo img{width:100%;height:100%;object-fit:contain;display:block;}
+  .title{font-size: clamp(18px,2vw,24px); font-weight:800;}
+  .subtitle{color:var(--muted); font-size: clamp(12px,1.8vw,14px);} 
+
+  /* ---- Sections ---- */
+  .section{max-width:1100px; margin:18px auto; padding:0 16px;}
+  .section h2{display:flex; align-items:center; gap:10px; font-size: clamp(18px,2.2vw,24px); margin:18px 0 10px; font-weight:900; color:var(--brand-700);} 
+  .desc{color:var(--muted); font-size:14px; margin:0 0 8px;}
+
+  /* ---- Link tiles ---- */
+  .linklist{display:grid; gap:12px;}
+  .tile{display:flex; align-items:center; gap:12px; padding:12px 14px; background:var(--card); border:1px solid var(--line); border-radius:14px; box-shadow:var(--shadow); text-decoration:none; color:var(--ink);} 
+  .tile:hover{background:#fdfefe; border-color:#d7e2ea;}
+  .badge{width:38px; height:38px; border-radius:12px; display:grid; place-items:center; background:linear-gradient(135deg, var(--brand) 0%, var(--brand-300) 100%); color:#fff; font-weight:800; flex:0 0 auto;}
+  .badge svg{width:22px; height:22px; stroke:#fff; fill:none; stroke-width:2; stroke-linecap:round; stroke-linejoin:round;}
+  .tile .ttext{display:flex; flex-direction:column; gap:4px;}
+  .tile .ttext .title{font-size:16px; font-weight:800;}
+  .tile .ttext .desc{font-size:13px; color:var(--muted); margin:0;}
+
+  /* ---- 4WD layout (car) ---- */
+  .layout-top{display:block;}
+  .wheel{position:relative;margin:8px auto;width:min(420px,92vw);aspect-ratio:1/1;}
+  .hub{position:absolute;top:50%;left:50%;translate:-50% -50%;width:clamp(260px,46vw,420px);height:clamp(260px,46vw,420px);} 
+  .hub img.carimg{width:100%;height:100%;object-fit:contain;display:block !important;}
+
+  .wheel .corner{position:absolute;display:inline-flex;align-items:center;gap:8px;text-decoration:none;background:#fff;border:1px solid var(--line);color:var(--brand-700);font-weight:800;padding:8px 10px;border-radius:999px;box-shadow:var(--shadow);font-size:14px;} 
+  .mini-badge{width:22px;height:22px;border-radius:6px;display:grid;place-items:center;background:linear-gradient(135deg, var(--brand) 0%, var(--brand-300) 100%);color:#fff;font-size:12px;font-weight:800;}
+  .mini-badge svg{width:14px;height:14px; stroke:#fff; fill:none; stroke-width:2; stroke-linecap:round; stroke-linejoin:round;}
+
+  .tiles4{display:grid; gap:12px;}
+
+  /* ======= Desktop (PC) ======= */
+  @media (min-width:1024px){
+    /* 上段：左=車、右=PLリンク（4WDリンクは一段下げてフル幅） */
+    .layout-top{display:grid; grid-template-columns: 340px 1fr; grid-template-areas: "wheel pl"; align-items:center; gap:16px;}
+    .wheel{grid-area: wheel; width:340px;}
+    .hub{width:220px;height:220px;}
+    /* タイヤから少し離しつつ中央寄り（以前より外側へ） */
+    #shitenno .wheel .corner.tl{top:18%; left:10%;}
+    #shitenno .wheel .corner.tr{top:18%; right:10%;}
+    #shitenno .wheel .corner.bl{bottom:18%; left:10%;}
+    #shitenno .wheel .corner.br{bottom:18%; right:10%;}
+
+    .pllink{grid-area: pl;}
+    /* 下段4つは同一行・フル幅 */
+    .tiles4-row{grid-template-columns: repeat(4, 1fr);} 
+  }
+
+  /* ======= Mobile（スマホ） ======= */
+  @media (max-width:767px){
+    .layout-top{display:block;}
+    .wheel{margin-top:4px;}
+    .pllink{margin:8px 0;}
+    .tiles4-row{grid-template-columns: 1fr;}
+    .card{min-height:auto;}
+    /* モバイルのチップ座標：タイヤに近すぎない中央寄り */
+    #shitenno .wheel .corner.tl{top:24%; left:12%;}
+    #shitenno .wheel .corner.tr{top:24%; right:12%;}
+    #shitenno .wheel .corner.bl{bottom:24%; left:12%;}
+    #shitenno .wheel .corner.br{bottom:24%; right:12%;}
+  }
+
+  /* ---- Footer ---- */
+  footer{border-top:1px solid var(--line); padding:16px; color:var(--muted); text-align:center;}
+  .credit-link{color:inherit;text-decoration:underline;text-underline-offset:2px;} 
+  /* 変動損益チップは中央固定 */
+  .wheel .corner.oncar{top:50%;left:50%;transform:translate(-50%,-50%);z-index:2;}
+  /* Header actions & button */
+  .actions{display:flex; align-items:center; gap:8px;}
+  .btn{border:1px solid var(--line); background:#fff; color:var(--brand-700); border-radius:12px; padding:8px 12px; font-weight:700; cursor:pointer; box-shadow:var(--shadow);} 
+  .btn:hover{background:#fefefe;}
+
+  /* QR modal */
+  .modal{position:fixed; inset:0; background:rgba(15,23,42,.5); display:none; align-items:center; justify-content:center; z-index:50;}
+  .modal.show{display:flex;}
+  .modal .modal-body{position:relative; background:#fff; border-radius:18px; padding:12px; max-width:min(92vw,560px); box-shadow:var(--shadow);} 
+  .modal .modal-body img{display:block; width:100%; height:auto;}
+  .modal .btn.close{position:absolute; top:8px; right:8px; padding:6px 10px; border-radius:999px;}
+
+  /* 画像のデフォルト保護 */
+  img{max-width:100%; height:auto;}
+
+  /* スマホの大きな写真（ヒーロー等）がはみ出したり細長くならないようにトリミング */
+  @media (max-width:767px){
+    .photo-frame, .hero-photo, .cover-photo, .kv{
+      position:relative; width:100%; aspect-ratio: 4 / 3; border-radius:16px; overflow:hidden; background:#eef3f7;
+    }
+    .photo-frame>img, .hero-photo>img, .cover-photo>img, .kv>img{
+      position:absolute; inset:0; width:100%; height:100%; object-fit:cover; object-position:center;
+    }
+  }
+</style>
+</head>
+<body>
+  <header class="hero">
+    <div class="topbar">
+      <div class="branding">
+        <a class="logo" href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" aria-label="税理士法人松本会計事務所 公式サイト"><img src="./ロゴ.png" alt="松本会計ロゴ"></a>
+        <div>
+          <div class="title">オリジナルツールポータル</div>
+          <div class="subtitle">黒字経営を加速する社内外向けリンク集</div>
+        </div>
+      </div>
+      <div class="actions">
+        <button id="qr-open" class="btn">共有用QRコード</button>
+      </div>
+    </div>
+  </header>
+  <!-- QRコード表示モーダル -->
+  <div id="qr-modal" class="modal" aria-hidden="true" role="dialog" aria-label="共有用QRコード">
+    <div class="modal-body">
+      <button class="btn close" id="qr-close" aria-label="閉じる">✕</button>
+      <img src="./共有用QR.png" alt="共有用QRコード" loading="lazy" />
+    </div>
+  </div>
+
+  <section id="shitenno" class="section">
+    <h2>🚗 黒字経営4WD</h2>
+    <p class="desc">変動PL＋四つの実務ツールで、黒字経営を駆動する。<br>（㈱TKCのFXクラウドシリーズとの併用を想定しています）</p>
+
+    <!-- 上段：左に車、右に変動PLリンク -->
+    <div class="layout-top">
+      <div class="wheel" aria-label="4WD配置">
+        <div class="hub">
+          <img class="carimg" alt="4WD car" src="./四輪駆動.png" decoding="async" loading="eager" />
+        </div>
+        <!-- 中央：変動損益（厳密中央） -->
+        <a class="corner oncar" href="https://takatrp.github.io/hendou_PL/" target="_blank" rel="noopener"><span class="mini-badge">PL</span><span>変動損益</span></a>
+        <!-- 四輪チップ（PCは30%/22%で中央寄り・タイヤから少し離す） -->
+        <a class="corner tl" href="https://takatrp.github.io/convert-to-sales/" target="_blank" rel="noopener"><span class="mini-badge"><svg viewBox="0 0 24 24"><path d="M7 12h10"/><path d="M10 9l-3 3 3 3"/><path d="M14 9l3 3-3 3"/></svg></span><span>売上換算</span></a>
+        <a class="corner tr" href="https://takatrp.github.io/price-up-down/" target="_blank" rel="noopener"><span class="mini-badge"><svg viewBox="0 0 24 24"><path d="M12 6v12"/><path d="M8 10l4-4 4 4"/><path d="M8 14l4 4 4-4"/></svg></span><span>価格改定</span></a>
+        <a class="corner bl" href="https://takatrp.github.io/time-unit-cost/" target="_blank" rel="noopener"><span class="mini-badge"><svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="9"/><path d="M12 7v5l3 2"/></svg></span><span>人件費</span></a>
+        <a class="corner br" href="https://takatrp.github.io/jidouka-kouka/" target="_blank" rel="noopener"><span class="mini-badge"><svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a8 8 0 0 0 0-6M4.6 9a8 8 0 0 0 0 6"/><path d="M12 2v2M12 20v2M2 12h2M20 12h2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M17.66 6.34l1.41-1.41M6.34 17.66l-1.41 1.41"/></svg></span><span>自動化効果</span></a>
+      </div>
+
+      <div class="linklist pllink">
+        <a class="tile" href="https://takatrp.github.io/hendou_PL/" target="_blank" rel="noopener">
+          <div class="badge">PL</div>
+          <div class="ttext"><div class="title">ボールで学ぶ変動損益計算書</div><p class="desc">売上高と限界利益、固定費の関係を直感的に理解できます。</p></div>
+        </a>
+      </div>
+    </div>
+
+    <!-- 一段下げ：4WDの4リンクを同一行（PC）／縦（モバイル）で表示 -->
+    <div class="tiles4 tiles4-row" aria-label="4WDの各ツール">
+      <a class="tile" href="https://takatrp.github.io/convert-to-sales/" target="_blank" rel="noopener">
+        <div class="badge"><svg viewBox="0 0 24 24"><path d="M7 12h10"/><path d="M10 9l-3 3 3 3"/><path d="M14 9l3 3-3 3"/></svg></div>
+        <div class="ttext"><div class="title">それ、売上に直すといくらですか？</div><p class="desc">支出額を必要売上金額に即換算。</p></div>
+      </a>
+      <a class="tile" href="https://takatrp.github.io/price-up-down/" target="_blank" rel="noopener">
+        <div class="badge"><svg viewBox="0 0 24 24"><path d="M12 6v12"/><path d="M8 10l4-4 4 4"/><path d="M8 14l4 4 4-4"/></svg></div>
+        <div class="ttext"><div class="title">価格改定検討ツール</div><p class="desc">価格改定の売上・利益影響を試算。</p></div>
+      </a>
+      <a class="tile" href="https://takatrp.github.io/time-unit-cost/" target="_blank" rel="noopener">
+        <div class="badge">¥</div>
+        <div class="ttext"><div class="title">人件費見える化ツール</div><p class="desc">時間単価で人件費を可視化。</p></div>
+      </a>
+      <a class="tile" href="https://takatrp.github.io/jidouka-kouka/" target="_blank" rel="noopener">
+        <div class="badge">⚙︎</div>
+        <div class="ttext"><div class="title">自動化効果試算ツール</div><p class="desc">自動化の投資対効果を試算。</p></div>
+      </a>
+    </div>
+  </section>
+
+  <section id="others" class="section">
+    <h2>🧰 その他便利ツール</h2>
+    <div class="tiles4">
+      <a class="tile" href="https://takatrp.github.io/withholding/" target="_blank" rel="noopener">
+        <div class="badge">%</div>
+        <div class="ttext"><div class="title">受取利息・配当金 仕訳補助</div><p class="desc">源泉徴収税額の見込みと仕訳補助のための簡易計算。</p></div>
+      </a>
+      <a class="tile" href="https://takatrp.github.io/genkasyoukyaku/" target="_blank" rel="noopener">
+        <div class="badge">Σ</div>
+        <div class="ttext"><div class="title">減価償却費計算ツール</div><p class="desc">定額/定率の償却費を即時計算。</p></div>
+      </a>
+      <a class="tile" href="https://takatrp.github.io/kigyoubouei/" target="_blank" rel="noopener">
+        <div class="badge"><svg viewBox="0 0 24 24"><path d="M12 2l7 4v6c0 5-3 9-7 10-4-1-7-5-7-10V6l7-4z"/></svg></div>
+        <div class="ttext"><div class="title">標準保障額・保険料換算ツール</div><p class="desc">標準保障額と保険料の換算を簡易算出。</p></div>
+      </a>
+    </div>
+  </section>
+
+  <footer>
+    <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r43</span></div>
+    <div id="last-updated" style="margin-top:6px; font-size:13px; color:var(--muted);"></div>
+    
+  </footer>
+
+<script>
+  (function(){
+    const yEl = document.getElementById('cpy-year'); if (yEl) yEl.textContent = new Date().getFullYear();
+    const upd = document.getElementById('last-updated');
+    if (upd) { const d = new Date(document.lastModified); const p=n=>String(n).padStart(2,'0'); upd.textContent = `最終更新: ${d.getFullYear()}-${p(d.getMonth()+1)}-${p(d.getDate())}`; }
+  })();
+
+  // QR modal open/close
+  (function(){
+    const modal = document.getElementById('qr-modal');
+    const openBtn = document.getElementById('qr-open');
+    const closeBtn = document.getElementById('qr-close');
+    if (openBtn && modal) openBtn.addEventListener('click', ()=> modal.classList.add('show'));
+    if (closeBtn && modal) closeBtn.addEventListener('click', ()=> modal.classList.remove('show'));
+    if (modal) modal.addEventListener('click', (e)=>{ if(e.target === modal) modal.classList.remove('show'); });
+    document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') modal?.classList.remove('show'); });
+  })();
+</script>
+</body>
+</html>
