--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
         </div>
       </div>
       <div class="actions">
-        <button id="qr-open" class="btn">共有用QRコード</button>
+        <button id="qr-open" class="btn">共有用QR</button>
       </div>
     </div>
   </header>
   <!-- QRコード表示モーダル -->
-  <div id="qr-modal" class="modal" aria-hidden="true" role="dialog" aria-label="共有用QRコード">
+  <div id="qr-modal" class="modal" aria-hidden="true" role="dialog" aria-label="共有用QR">
     <div class="modal-body">
       <button class="btn close" id="qr-close" aria-label="閉じる">✕</button>
-      <img src="./共有用QR.png" alt="共有用QRコード" loading="lazy" />
+      <img src="./共有用QR.png" alt="共有用QR" loading="lazy" />
     </div>
   </div>
 
