--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-<title>松本会計｜オリジナルツールポータル</title>
+<title>松本会計ツールポータル</title>
 <meta name="description" content="松本会計の社内外向けツールを一画面に集約。黒字経営4WDと各種便利ツール。" />
 <link rel="icon" type="image/png" sizes="192x192" href="./favicon192192.png" />
 <link rel="shortcut icon" type="image/png" href="./favicon192192.png" />
@@ -126,20 +126,20 @@
       <div class="branding">
         <a class="logo" href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" aria-label="税理士法人松本会計事務所 公式サイト"><img src="./ロゴ.jpg" alt="松本会計ロゴ"></a>
         <div>
-          <div class="title">松本会計｜オリジナルツールポータル</div>
-          <div class="subtitle">黒字経営を加速する社内外向けリンク集</div>
+          <div class="title">松本会計ツールポータル</div>
+          <div class="subtitle">黒字経営を加速する松本会計オリジナルツール集</div>
         </div>
       </div>
       <div class="actions">
-        <button id="qr-open" class="btn">共有用QR</button>
+        <button id="qr-open" class="btn">共有用QRコード</button>
       </div>
     </div>
   </header>
   <!-- QRコード表示モーダル -->
-  <div id="qr-modal" class="modal" aria-hidden="true" role="dialog" aria-label="共有用QR">
+  <div id="qr-modal" class="modal" aria-hidden="true" role="dialog" aria-label="共有用QRコード">
     <div class="modal-body">
       <button class="btn close" id="qr-close" aria-label="閉じる">✕</button>
-      <img src="./共有用QR.png" alt="共有用QR" loading="lazy" />
+      <img src="./共有用QR.png" alt="共有用QRコード" loading="lazy" />
     </div>
   </div>
 
@@ -165,7 +165,7 @@
       <div class="linklist pllink">
         <a class="tile" href="https://takatrp.github.io/hendou_PL/" target="_blank" rel="noopener">
           <div class="badge">PL</div>
-          <div class="ttext"><div class="title">ボールで学ぶ変動損益計算書</div><p class="desc">売上高と限界利益、固定費の関係を直感的に理解できます。</p></div>
+          <div class="ttext"><div class="title">ボールで学ぶ変動損益計算書</div><p class="desc">売上高と限界利益、固定費の関係を直感的に理解。</p></div>
         </a>
       </div>
     </div>
@@ -200,17 +200,17 @@
       </a>
       <a class="tile" href="https://takatrp.github.io/genkasyoukyaku/" target="_blank" rel="noopener">
         <div class="badge">Σ</div>
-        <div class="ttext"><div class="title">減価償却費計算ツール</div><p class="desc">定額/定率の償却費を即時計算。</p></div>
+        <div class="ttext"><div class="title">減価償却費計算ツール</div><p class="desc">定額法・定率法の償却費を即時計算。</p></div>
       </a>
       <a class="tile" href="https://takatrp.github.io/kigyoubouei/" target="_blank" rel="noopener">
         <div class="badge"><svg viewBox="0 0 24 24"><path d="M12 2l7 4v6c0 5-3 9-7 10-4-1-7-5-7-10V6l7-4z"/></svg></div>
-        <div class="ttext"><div class="title">標準保障額・保険料換算ツール</div><p class="desc">標準保障額と保険料の換算を簡易算出。</p></div>
+        <div class="ttext"><div class="title">標準保障額・保険料換算ツール</div><p class="desc">標準保障額と保険料を売上高に換算。</p></div>
       </a>
     </div>
   </section>
 
   <footer>
-    <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r45</span></div>
+    <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r46</span></div>
     <div id="last-updated" style="margin-top:6px; font-size:13px; color:var(--muted);"></div>
     
   </footer>
