--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
         <a class="logo" href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" aria-label="税理士法人松本会計事務所 公式サイト"><img src="./ロゴ.jpg" alt="松本会計ロゴ"></a>
         <div>
           <div class="title">松本会計ツールポータル</div>
-          <div class="subtitle">黒字経営を加速する松本会計オリジナルツール集</div>
+          <div class="subtitle">黒字経営を加速する、松本会計オリジナルツール集</div>
         </div>
       </div>
       <div class="actions">
-        <button id="qr-open" class="btn">共有用QRコード</button>
+        <button id="qr-open" class="btn">共有用QR</button>
       </div>
     </div>
   </header>
@@ -210,7 +210,7 @@
   </section>
 
   <footer>
-    <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r46</span></div>
+    <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r47</span></div>
     <div id="last-updated" style="margin-top:6px; font-size:13px; color:var(--muted);"></div>
     
   </footer>
