--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
       position:absolute; inset:0; width:100%; height:100%; object-fit:cover; object-position:center;
     }
   }
+  /* コンパクトボタン */
+  .btn.compact{font-size:12px; padding:6px 10px; border-radius:10px;}
 </style>
 </head>
 <body>
@@ -132,6 +134,7 @@
       </div>
       <div class="actions">
         <button id="qr-open" class="btn">共有用QR</button>
+        <button id="a2hs-open" class="btn compact">ホーム画面への追加方法</button>
       </div>
     </div>
   </header>
@@ -140,6 +143,14 @@
     <div class="modal-body">
       <button class="btn close" id="qr-close" aria-label="閉じる">✕</button>
       <img src="./共有用QR.png" alt="共有用QRコード" loading="lazy" />
+    </div>
+  </div>
+
+  <!-- ホーム画面追加ガイド（PNG）モーダル -->
+  <div id="a2hs-modal" class="modal" aria-hidden="true" role="dialog" aria-label="ホーム画面への追加方法">
+    <div class="modal-body">
+      <button class="btn close" id="a2hs-close" aria-label="閉じる">✕</button>
+      <img src="./ホーム画面に追加.png" alt="ホーム画面への追加方法" loading="lazy" />
     </div>
   </div>
 
@@ -165,7 +176,7 @@
       <div class="linklist pllink">
         <a class="tile" href="https://takatrp.github.io/hendou_PL/" target="_blank" rel="noopener">
           <div class="badge">PL</div>
-          <div class="ttext"><div class="title">ボールで学ぶ変動損益計算書</div><p class="desc">売上高と限界利益、固定費の関係を直感的に理解</p></div>
+          <div class="ttext"><div class="title">ボールで学ぶ変動損益計算書</div><p class="desc">売上高と限界利益、固定費の関係を直感的に理解。</p></div>
         </a>
       </div>
     </div>
@@ -174,19 +185,19 @@
     <div class="tiles4 tiles4-row" aria-label="4WDの各ツール">
       <a class="tile" href="https://takatrp.github.io/convert-to-sales/" target="_blank" rel="noopener">
         <div class="badge"><svg viewBox="0 0 24 24"><path d="M7 12h10"/><path d="M10 9l-3 3 3 3"/><path d="M14 9l3 3-3 3"/></svg></div>
-        <div class="ttext"><div class="title">それ、売上に直すといくらですか？</div><p class="desc">支出額を必要売上金額に即換算</p></div>
+        <div class="ttext"><div class="title">それ、売上に直すといくらですか？</div><p class="desc">支出額を必要売上金額に即換算。</p></div>
       </a>
       <a class="tile" href="https://takatrp.github.io/price-up-down/" target="_blank" rel="noopener">
         <div class="badge"><svg viewBox="0 0 24 24"><path d="M12 6v12"/><path d="M8 10l4-4 4 4"/><path d="M8 14l4 4 4-4"/></svg></div>
-        <div class="ttext"><div class="title">価格改定検討ツール</div><p class="desc">価格改定の売上・利益影響を試算</p></div>
+        <div class="ttext"><div class="title">価格改定検討ツール</div><p class="desc">価格改定の売上・利益影響を試算。</p></div>
       </a>
       <a class="tile" href="https://takatrp.github.io/time-unit-cost/" target="_blank" rel="noopener">
         <div class="badge">¥</div>
-        <div class="ttext"><div class="title">人件費見える化ツール</div><p class="desc">時間単価で人件費を可視化</p></div>
+        <div class="ttext"><div class="title">人件費見える化ツール</div><p class="desc">時間単価で人件費を可視化。</p></div>
       </a>
       <a class="tile" href="https://takatrp.github.io/jidouka-kouka/" target="_blank" rel="noopener">
         <div class="badge">⚙︎</div>
-        <div class="ttext"><div class="title">自動化効果試算ツール</div><p class="desc">自動化の投資対効果を試算</p></div>
+        <div class="ttext"><div class="title">自動化効果試算ツール</div><p class="desc">自動化の投資対効果を試算。</p></div>
       </a>
     </div>
   </section>
@@ -196,21 +207,21 @@
     <div class="tiles4">
       <a class="tile" href="https://takatrp.github.io/withholding/" target="_blank" rel="noopener">
         <div class="badge">%</div>
-        <div class="ttext"><div class="title">受取利息・配当金 仕訳補助</div><p class="desc">源泉徴収税額の見込みと仕訳補助のための簡易計算</p></div>
+        <div class="ttext"><div class="title">受取利息・配当金 仕訳補助</div><p class="desc">源泉徴収税額の見込みと仕訳補助のための簡易計算。</p></div>
       </a>
       <a class="tile" href="https://takatrp.github.io/genkasyoukyaku/" target="_blank" rel="noopener">
         <div class="badge">Σ</div>
-        <div class="ttext"><div class="title">減価償却費計算ツール</div><p class="desc">定額法・定率法の償却費を即時計算</p></div>
+        <div class="ttext"><div class="title">減価償却費計算ツール</div><p class="desc">定額法・定率法の償却費を即時計算。</p></div>
       </a>
       <a class="tile" href="https://takatrp.github.io/kigyoubouei/" target="_blank" rel="noopener">
         <div class="badge"><svg viewBox="0 0 24 24"><path d="M12 2l7 4v6c0 5-3 9-7 10-4-1-7-5-7-10V6l7-4z"/></svg></div>
-        <div class="ttext"><div class="title">標準保障額・保険料換算ツール</div><p class="desc">標準保障額と保険料を売上高に換算</p></div>
+        <div class="ttext"><div class="title">標準保障額・保険料換算ツール</div><p class="desc">標準保障額と保険料を売上高に換算。</p></div>
       </a>
     </div>
   </section>
 
   <footer>
-    <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r47</span></div>
+    <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r48</span></div>
     <div id="last-updated" style="margin-top:6px; font-size:13px; color:var(--muted);"></div>
     
   </footer>
@@ -227,6 +238,16 @@
     const modal = document.getElementById('qr-modal');
     const openBtn = document.getElementById('qr-open');
     const closeBtn = document.getElementById('qr-close');
+    if (openBtn && modal) openBtn.addEventListener('click', ()=> modal.classList.add('show'));
+    if (closeBtn && modal) closeBtn.addEventListener('click', ()=> modal.classList.remove('show'));
+    if (modal) modal.addEventListener('click', (e)=>{ if(e.target === modal) modal.classList.remove('show'); });
+    document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') modal?.classList.remove('show'); });
+  })();
+  // A2HS modal open/close
+  (function(){
+    const modal = document.getElementById('a2hs-modal');
+    const openBtn = document.getElementById('a2hs-open');
+    const closeBtn = document.getElementById('a2hs-close');
     if (openBtn && modal) openBtn.addEventListener('click', ()=> modal.classList.add('show'));
     if (closeBtn && modal) closeBtn.addEventListener('click', ()=> modal.classList.remove('show'));
     if (modal) modal.addEventListener('click', (e)=>{ if(e.target === modal) modal.classList.remove('show'); });
